kubernetes/k8s-cert-manager/k8s-passthrough-cert-manager/backend-gateway-passthrough.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "server.mycompany.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-gateway
spec:
  hosts:
    - "server.mycompany.com"
  gateways:
    - backend-gateway
  tls:
    - route:
        - destination:
            host: helidon-examples-todo-backend
            port:
              number: 443
          weight: 100
      match:
        - port: 443
          sniHosts:
            - "server.examplecompany.com"
