kubernetes/k8s-cert-manager/k8s-passthrough-cert-manager/frontend-gateway-passthrough.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "client.mycompany.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
    - "client.mycompany.com"
  gateways:
    - frontend-gateway
  tls:
    - route:
        - destination:
            host: frontend
            port:
              number: 443
          weight: 100
      match:
        - port: 443
          sniHosts:
            - "client.examplecompany.com"
